# 2020_gl_projects

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md
cube_shadow_map/: CMakeLists.txt
cube_shadow_map/shaders/: simple_light.frag  simple_light.vert
cube_shadow_map/src/: main.cpp
gfx_utils/: CMakeLists.txt
gfx_utils/include/gfx_utils/: entity.h  lights.h  material.h  mesh.h  model.h  primitives.h  program.h  scene.h  shader.h  texture.h
gfx_utils/include/gfx_utils/debug/: wireframe_drawer.h
gfx_utils/include/gfx_utils/resource/: light_loader.h  resource_manager.h
gfx_utils/include/gfx_utils/resources/: resource_manager.h
gfx_utils/include/gfx_utils/window/: camera.h  window.h
gfx_utils/src/: entity.cpp  mesh.cpp  primitives.cpp  program.cpp  scene.cpp  shader.cpp  texture.cpp
gfx_utils/src/resource/: light_loader.cpp  resource_manager.cpp
gfx_utils/src/resources/: resource_manager.cpp
gfx_utils/src/window/: camera.cpp  window.cpp
graphics_utils/: CMakeLists.txt
graphics_utils/include/graphics_utils/: shader.h
graphics_utils/src/: shader.cpp
hello_mesh/: CMakeLists.txt
hello_mesh/shaders/: textured_mesh.vert
hello_mesh/src/: main.cpp
hello_sponza/shaders/: mesh.frag  mesh.vert
hello_sponza/src/: main.cpp
hello_triangle/: CMakeLists.txt
hello_triangle/shaders/: screen_color.frag  screen_color.vert
hello_triangle/src/: main.cpp
hello_window/: CMakeLists.txt
hello_window/shaders/: textured_mesh.frag
hello_window/src/: main.cpp
libs/gfx_utils/: CMakeLists.txt
libs/gfx_utils/include/gfx_utils/: entity.h  lights.h  material.h  mesh.h  model.h  program.h  texture.h
libs/gfx_utils/include/gfx_utils/gl/: gl_resource_manager.h
libs/gfx_utils/include/gfx_utils/renderers/: renderer.h  simple_renderer.h
libs/gfx_utils/include/gfx_utils/resource/: data_source.h  light_loader.h
libs/gfx_utils/include/gfx_utils/scene/: data_source.h  light_loader.h  model_loader.h  scene.h
libs/gfx_utils/include/gfx_utils/window/: window.h
libs/gfx_utils/src/: CMakeLists.txt  entity.cpp  mesh.cpp  primitives.cpp  program.cpp  texture.cpp
libs/gfx_utils/src/debug/: CMakeLists.txt  wireframe_drawer.cpp
libs/gfx_utils/src/gl/: CMakeLists.txt  gl_resource_manager.cpp
libs/gfx_utils/src/renderers/: CMakeLists.txt  renderer.cpp  simple_renderer.cpp
libs/gfx_utils/src/resource/: data_source.cpp  light_loader.cpp  resource_manager.cpp
libs/gfx_utils/src/scene/: CMakeLists.txt  data_source.cpp  light_loader.cpp  model_loader.cpp  scene.cpp
libs/gfx_utils/src/window/: CMakeLists.txt  camera.cpp  window.cpp
libs/gl_utils/: CMakeLists.txt
libs/gl_utils/include/gl_utils/: program.h
libs/gl_utils/src/: program.cpp
projs/deferred_sponza/: CMakeLists.txt
projs/deferred_sponza/scene/: scene.json
projs/deferred_sponza/shaders/: geom_pass.frag  light_pass.frag
projs/deferred_sponza/src/: app.cpp
projs/hello_renderer/: CMakeLists.txt
projs/hello_renderer/assets/cube/: default.mtl
projs/hello_renderer/shaders/: shadow_pass.vert  simple_light.vert
projs/hello_renderer/src/: app.cpp  app.h
projs/hello_sponza/: CMakeLists.txt
projs/hello_sponza/shaders/: mesh.frag
projs/hello_sponza/src/: main.cpp
projs/load_sponza/: CMakeLists.txt
projs/load_sponza/assets/: scene.json
projs/load_sponza/shaders/: shadow_pass.geom
projs/load_sponza/src/: app.cpp
projs/shadow_cube/: CMakeLists.txt
projs/shadow_cube/assets/: scene.json
projs/shadow_cube/shaders/: shadow_pass.frag  shadow_pass.vert  simple_light.frag  simple_light.vert
projs/shadow_cube/src/: app.cpp  app.h
projs/shadow_cube_map/: CMakeLists.txt  resources.json
projs/shadow_cube_map/shaders/: simple_light.frag  simple_light.vert
projs/shadow_cube_map/src/: app.cpp
projs/shadow_map/: CMakeLists.txt
projs/shadow_map/assets/: scene.json
projs/shadow_map/src/: app.cpp  app.h
projs/shadow_sponza/: CMakeLists.txt
projs/shadow_sponza/assets/: scene.json
projs/shadow_sponza/src/: app.cpp
projs/sphere_reflect/: CMakeLists.txt
projs/sphere_reflect/scene/: scene.json
projs/sphere_reflect/shaders/: reflection.frag  reflection.vert
projs/sphere_reflect/src/: app.cpp  app.h
projs/ssao_sponza/: CMakeLists.txt
projs/ssao_sponza/assets/: scene.json
projs/ssao_sponza/shaders/: geom_pass.frag  geom_pass.vert  light_pass.frag  ssao_blur.frag  ssao_pass.frag  ssao_pass.vert
projs/ssao_sponza/src/: app.cpp  app.h
shadow_map/: CMakeLists.txt
shadow_map/assets/: resources.json
shadow_map/shaders/: lighting_pass.frag  mesh_colored.frag  simple_light.frag  simple_light.vert  wireframe.frag
shadow_map/src/: app.cpp  app.h  main.cpp
